--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,10 @@
 .form-control {
   border-radius: 0;
 }
+
+.badge {
+  border-radius: 0;
+}
 /* Bootstrap 4 --- */
 
 /* --- Overlay */
@@ -67,7 +71,7 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #000;
+  background-color: #FFF;
   overflow-x: hidden;
   transition: 0.5s;
 }
@@ -83,7 +87,7 @@
   padding: 8px;
   text-decoration: none;
   font-size: 24px !important;
-  color: #fff;
+  color: #111;
   display: block;
   transition: 0.3s;
 }
@@ -95,7 +99,7 @@
 
 .overlay .closebtn {
   cursor: pointer;
-  color: #fff !important;
+  color: #111 !important;
   position: absolute;
   top: 20px;
   right: 45px;
